--- a/index.qmd
+++ b/index.qmd
@@ -5,23 +5,27 @@ subtitle: "posit::conf(2024)"
 
 ## Date + location
 
-August 12, 2024
+🗓️ August 12, 2024
 
-9 am - 5 pm
+🕘 9 am - 5 pm
 
-500 \| Elwha B
+🏨 500 \| Elwha B
 
 ## Schedule
 
-| Time          | Activity       |
-|:--------------|:---------------|
-| 09:00 - 10:30 | Session 1      |
-| 10:30 - 11:00 | *Coffee break* |
-| 11:00 - 12:30 | Session 2      |
-| 12:30 - 13:30 | *Lunch break*  |
-| 13:30 - 15:00 | Session 3      |
-| 15:00 - 15:30 | *Coffee break* |
-| 15:30 - 17:00 | Session 4      |
+::: callout-note
+Links to modules to be updated before the workshop start.
+:::
+
+| Time          | Activity          |
+|:--------------|:------------------|
+| 09:00 - 10:30 | Module 1          |
+| 10:30 - 11:00 | ☕ *Coffee break* |
+| 11:00 - 12:30 | Module 2          |
+| 12:30 - 13:30 | 🍽️ *Lunch break*  |
+| 13:30 - 15:00 | Module 3          |
+| 15:00 - 15:30 | ☕ *Coffee break* |
+| 15:30 - 17:00 | Module 4          |
 
 ## Overview
 
