--- a/2-module-two/2-module-two.qmd
+++ b/2-module-two/2-module-two.qmd
@@ -7,8 +7,8 @@ author:
       - name: Duke University
       - name: Posit, PBC
 date: "2024-08-12"
-footer: "ADD LINK"
-logo: "../images/slide-logo.png"
+footer: "https://pos.it/quarto-dashboards-24"
+logo: "../images/logo.png"
 format:
   revealjs:
     theme: ../style/slides.scss
