--- a/2-module-two/index.qmd
+++ b/2-module-two/index.qmd
@@ -2,6 +2,10 @@
 title: "Module two"
 ---
 
+::: callout-note
+Materials for this module to be updated before the workshop start.
+:::
+
 ## Slides
 
 [View slides in full screen](2-module-two.html)
@@ -9,7 +13,6 @@ title: "Module two"
 ```{=html}
 <iframe class="slide-deck" src="2-module-two.html" height="420" width="747" style="border: 1px solid #2e3846;"></iframe>
 ```
-
 ## Exercises
 
 To be posted.
