Update links to modules

--- a/3-theming-styling/index.qmd
+++ b/3-theming-styling/index.qmd
@@ -8,10 +8,10 @@ Materials for this module to be updated before the workshop start.
 
 ## Slides
 
-[View slides in full screen](3-module-three.html)
+[View slides in full screen](3-theming-styling.html)
 
 ```{=html}
-<iframe class="slide-deck" src="3-module-three.html" height="420" width="747" style="border: 1px solid #2e3846;"></iframe>
+<iframe class="slide-deck" src="3-theming-styling.html" height="420" width="747" style="border: 1px solid #2e3846;"></iframe>
 ```
 ## Exercises
 
