--- a/1-hello-dashboards/index.qmd
+++ b/1-hello-dashboards/index.qmd
@@ -8,10 +8,10 @@ Materials for this module to be updated before the workshop start.
 
 ## Slides
 
-[View slides in full screen](1-module-one.html)
+[View slides in full screen](1-hello-dashboards.html)
 
 ```{=html}
-<iframe class="slide-deck" src="1-module-one.html" height="420" width="747" style="border: 1px solid #2e3846;"></iframe>
+<iframe class="slide-deck" src="1-hello-dashboards.html" height="420" width="747" style="border: 1px solid #2e3846;"></iframe>
 ```
 ## Exercises
 
