--- a/4-parameters-interactivity-deployment/index.qmd
+++ b/4-parameters-interactivity-deployment/index.qmd
@@ -8,10 +8,10 @@ Materials for this module to be updated before the workshop start.
 
 ## Slides
 
-[View slides in full screen](4-module-four.html)
+[View slides in full screen](4-parameters-interactivity-deployment.html)
 
 ```{=html}
-<iframe class="slide-deck" src="4-module-four.html" height="420" width="747" style="border: 1px solid #2e3846;"></iframe>
+<iframe class="slide-deck" src="4-parameters-interactivity-deployment.html" height="420" width="747" style="border: 1px solid #2e3846;"></iframe>
 ```
 ## Exercises
 
