--- a/index.qmd
+++ b/index.qmd
@@ -3,6 +3,10 @@ title: "Build-a-Dashboard Workshop"
 subtitle: "posit::conf(2024)"
 ---
 
+::: callout-important
+The materials will continue to be updated until the workshop.
+:::
+
 ## Date + location
 
 🗓️ August 12, 2024
@@ -12,10 +16,6 @@ subtitle: "posit::conf(2024)"
 🏨 500 \| Elwha B
 
 ## Schedule
-
-::: callout-note
-Links to modules to be updated before the workshop start.
-:::
 
 | Time          | Activity          |
 |:--------------|:------------------|
